--- a/home.html
+++ b/home.html
@@ -305,7 +305,7 @@
             <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('./images/football.jpg'); opacity: 0.9;">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Football.</h3>
-                <p>Love to play and watch football. Being a Man Utd fan hasn't been easy for a while now 😭</p>
+                <p>Love to play and watch football. Being a Man Utd fan hasn't been easy lately 😭</p>
               </div>
             </div>
           </div>
