--- a/home.html
+++ b/home.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <div class="top">
-    <nav id="navbar-example2" class="navbar justify-content-center animate__animated animate__fadeInDown">
-    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <!-- <nav id="navbar-example2" class="navbar navbar-expand-lg justify-content-center animate__animated animate__fadeInDown">
     <ul class="nav nav-pills">
         <li class="nav-item">
         <a class="nav-link" href="#overview" style="color: #F5F5F5;"><b>Overview</b></a>
@@ -36,7 +35,40 @@
           <a class="nav-link" href="#contactme" style="color: #F5F5F5;"><b>Contact Me</b></a>
         </li>
     </ul>
+    </nav> -->
+    <nav class="navbar navbar-expand-md navbar-dark">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#overview" style="color: #F5F5F5;"><b>Overview</b></a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="#education" style="color: #F5F5F5;"><b>Education</b></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link " href="#skills" style="color: #F5F5F5;"><b>Skills</b></a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#workex" style="color: #F5F5F5;"><b>Experience</b></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#certificate" style="color: #F5F5F5;"><b>Certifications</b></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#interests" style="color: #F5F5F5;"><b>Interests</b></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contactme" style="color: #F5F5F5;"><b>Contact Me</b></a>
+              </li>
+          </ul>
+        </div>
+      </div>
     </nav>
+
 
     <!--Overview-->
     <div  id = "overview" class="container-fluid">
