--- a/home.html
+++ b/home.html
@@ -186,7 +186,7 @@
                   </svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis mb-3">Lime.ai</h3>
+              <h3 class="fs-2 text-body-emphasis mb-3"><a href="https://www.lime.ai" style="text-decoration: none; color: black;">Lime.ai</a></h3>
               <ul style="list-style: none;">
                 <li><h5>Senior Engineer (June 2023)</h5></li>
                 <li><b>Electric Vehicles | Data Infrastructure and Analytics</b></li>
