--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@
                     <li>Problem Solving</li>
                     <li>Creativity</li>
                     <li>Leadership</li>
-                    <li>Empathetic</li>
+                    <li>Empathy</li>
                 </ul>
           </div>
         </div>
