--- a/home.html
+++ b/home.html
@@ -137,6 +137,21 @@
     <div class="container-fluid px-5 py-5" id="skills">
         <!-- <h2 class="pb-2 border-bottom">SKILLS</h2> -->
         <div class="skills row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center hidden">
+            <div class="feature col">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
+                <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
+                    <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0"/>
+                  </svg>
+                </div>
+            <h3 class="fs-2">Programming</h3>
+            <ul>
+                <li>Python</li>
+                <li>Java</li>
+                <li>html</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+          </div>
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
