--- a/home.html
+++ b/home.html
@@ -143,13 +143,11 @@
                     <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0"/>
                   </svg>
                 </div>
-            <h3 class="fs-2">Programming</h3>
+            <h3 class="fs-2">Hardware</h3>
             <ul>
-                <li>Python</li>
-                <li>Java</li>
-                <li>html</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
+                <li>Li-ion cell chemistry</li>
+                <li>Cell Testing</li>
+                <li>Fast-charging</li>
             </ul>
           </div>
           <div class="feature col">
@@ -158,7 +156,7 @@
                     <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0"/>
                   </svg>
                 </div>
-            <h3 class="fs-2">Programming</h3>
+            <h3 class="fs-2">Software</h3>
             <ul>
                 <li>Python</li>
                 <li>Java</li>
