--- a/home.html
+++ b/home.html
@@ -136,7 +136,7 @@
     <!--SKILLS-->
     <div class="container-fluid px-5 py-5" id="skills">
         <!-- <h2 class="pb-2 border-bottom">SKILLS</h2> -->
-        <div class="skills row g-4 py-5 row-cols-2 row-cols-lg-4 justify-content-center hidden">
+        <div class="skills row g-4 py-5 row-cols-lg-4 justify-content-center hidden">
             <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-gear-wide-connected" viewBox="0 0 16 16">
