--- a/home.html
+++ b/home.html
@@ -210,7 +210,7 @@
             <div>
               <h3 class="fs-2 text-body-emphasis mb-3"><a href="https://www.lime.ai" style="text-decoration: none; color: black;">Lime.ai</a></h3>
               <ul style="list-style: none;">
-                <li><h5>Senior Engineer (June 2023)</h5></li>
+                <li><h5>Senior Engineer (June 2023 - curr.)</h5></li>
                 <li><b>Electric Vehicles | Data Infrastructure and Analytics</b></li>
                 <li>Utilization of machine learning and analytic tools to understand and predict the behaviour of Li-ion batteries. </li>
                 <li>Developing state of the art technology for battery management systems (BMS) in real time.</li>
